# AnisoGradientFlowAnalysis

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  fortFlowAna.toml  fpm.toml
.github/workflows/: CICD.yml  check-precommit.yml
app/: main.f90  processPyErrors.py  w0RE.f90  w0RE_boot.f90
cmake/: CMakeLists.txt  demoConfig.cmake.in
cmake/modules/: Findtest-drive.cmake  demo_status.cmake  sample_utils.cmake
src/: AniGFAna.f90  CMakeLists.txt  colours.f90  flowAna.f90  sample_module.f90  splineOperations.f90  types.f90
src/subdir/: CMakeLists.txt  second_sample.f90
test/: CMakeLists.txt  main_tests.f90  test_base_utils.f90_old
